# GoogleTestSample

./: CMakeLists.txt  LICENSE  README.md
src/: mathtest.cpp  sampletest.cpp
